<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/show"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:hint="@string/result"
            android:textSize="25sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bm1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="M+"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/bm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="M"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/bm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="M-"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:gravity="bottom"
        android:hint="@string/expression"
        android:textSize="25sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:gravity="center"
                android:text="@string/clear"
                android:textSize="30sp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@mipmap/delete"
                android:gravity="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:gravity="center"
                android:text="@string/divide"
                android:textSize="30sp" />


            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:gravity="center"
                android:text="@string/multiply"
                android:textSize="30sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"


                android:gravity="center"
                android:text="@string/seven"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"

                android:gravity="center"
                android:text="@string/eight"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:gravity="center"
                android:text="@string/nine"

                android:textSize="30sp" />

            <Button
                android:id="@+id/subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"

                android:gravity="center"
                android:text="@string/subtract"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"

                android:gravity="center"
                android:text="@string/four"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"

                android:gravity="center"
                android:text="@string/five"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"


                android:gravity="center"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"

                android:gravity="center"
                android:text="@string/add"
                android:textSize="30sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/frame1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/one"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"

                            android:gravity="center"
                            android:text="@string/one"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/two"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"

                            android:gravity="center"
                            android:text="@string/two"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/three"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"
                            android:gravity="center"
                            android:text="@string/three"
                            android:textSize="30sp" />


                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/frame1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/percentage"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"
                            android:gravity="center"

                            android:text="@string/percentage"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/zero"

                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"
                            android:gravity="center"
                            android:text="@string/zero"

                            android:textSize="30sp" />

                        <Button
                            android:id="@+id/AC"

                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"
                            android:gravity="center"
                            android:text="@string/ac"
                            android:textColor="#ff0000"
                            android:textSize="30sp" />

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>


            <Button
                android:id="@+id/equal"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="#FFA500"

                android:gravity="center"
                android:text="="
                android:textSize="30sp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>